bunch of changes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,5 @@
 body {
-    background-color: #fafbfc;
-    padding:0 !important;
+    background-color: #99b3cdd2;
     margin:0 !important;
     display: flex;
     justify-content: center;
