--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,5 +4,5 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    border:solid 2px orange;/* test */
+    /* border:solid 2px orange;test */
 }
